Fixed Spacing Issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     background-color: #f4f4f4;
 }
 
@@ -99,8 +99,6 @@ main h1 {
 .card a:hover {
     text-decoration: underline;
 }
-
-
 
 footer {
     background-color: rgb(199, 59, 59);
